// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[item=duralumin] Duralumin Provide 1`] = `
Set {
  "duralumin",
}
`;

exports[`Auog Bonemeal Provide 1`] = `
Set {
  "bonemeal",
}
`;

exports[`Chemical Science Pack Provide (from science!) 1`] = `
Set {
  "chemical-science-pack",
}
`;

exports[`High Power Resistors / Ceramic Capacitors / Air-Core Conductor Provide 1`] = `
Set {
  "resistor1",
  "capacitor1",
  "inductor1",
}
`;

exports[`Incubated Petri Dish Provide 1`] = `
Set {
  "petri-dish-bacteria",
}
`;

exports[`Iron Ore Provide 1`] = `
Set {
  "iron-ore",
}
`;

exports[`Laboratory Instruments Provide 1`] = `
Set {
  "lab-instrument",
}
`;

exports[`Useless Provide 1`] = `Set {}`;

exports[`slaked lime Provide Station 1`] = `
Set {
  "slacked-lime-barrel",
}
`;
